--- a/app/globals.css
+++ b/app/globals.css
@@ -154,14 +154,30 @@ html {
 .hero-image-wrapper {
   perspective: 1000px;
 }
+
 .hero-image {
+  position: relative;
   transform: rotateX(15deg) scale(1);
-  transition: transform 0.5s ease-out;
-  will-change: transform;
+  transition: transform 0.5s ease-out, opacity 1s ease-in-out;
+  will-change: transform, opacity;
 }
+
 .hero-image.scrolled {
   transform: rotateX(0deg) scale(1) translateY(40px);
 }
+
+.hero-image img {
+  transition: opacity 1s ease-in-out;
+}
+
+.hero-image img.fade-out {
+  opacity: 0;
+}
+
+.hero-image img.fade-in {
+  opacity: 1;
+}
+
 
 .no-visible-scrollbar {
   scrollbar-width: none;
@@ -172,4 +188,5 @@ html {
 .no-visible-scrollbar::-webkit-scrollbar {
   display: none;
 }
+
 
